tests/ui/dyn-star/illegal.stderr
warning: the feature `dyn_star` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/illegal.rs:1:12
   |
LL | #![feature(dyn_star)]
   |            ^^^^^^^^
   |
   = note: see issue #102425 <https://github.com/rust-lang/rust/issues/102425> for more information
   = note: `#[warn(incomplete_features)]` on by default

error[E0606]: casting `(dyn* Foo + Send + 'static)` as `dyn* Foo` is invalid
  --> $DIR/illegal.rs:7:5
   |
LL |     x as dyn* Foo;
   |     ^^^^^^^^^^^^^

error[E0277]: `dyn Foo` needs to have the same ABI as a pointer
  --> $DIR/illegal.rs:12:5
   |
LL |     *x as dyn* Foo;
   |     ^^ `dyn Foo` needs to be a pointer-like type
   |
   = help: the trait `PointerLike` is not implemented for `dyn Foo`

error: aborting due to 2 previous errors; 1 warning emitted

Some errors have detailed explanations: E0277, E0606.
For more information about an error, try `rustc --explain E0277`.
